load_balancers_imported.tf
resource "aws_lb" "my_lb_1" {
    client_keep_alive                                            = 3600
    customer_owned_ipv4_pool                                     = null
    desync_mitigation_mode                                       = "defensive"
    drop_invalid_header_fields                                   = false
    enable_cross_zone_load_balancing                             = true
    enable_deletion_protection                                   = false
    enable_http2                                                 = true
    enable_tls_version_and_cipher_suite_headers                  = false
    enable_waf_fail_open                                         = false
    enable_xff_client_port                                       = false
    enable_zonal_shift                                           = false
    enforce_security_group_inbound_rules_on_private_link_traffic = null
    idle_timeout                                                 = 60
    internal                                                     = false
    ip_address_type                                              = "ipv4"
    load_balancer_type                                           = "application"
    name                                                         = "my-lb-1"
    name_prefix                                                  = null
    preserve_host_header                                         = false
    security_groups                                              = [
        "sg-0bde661d3c96ae7d1",
    ]
    tags                                                         = {
        "Env"  = "Test"
        "Name" = "Tao-LB"
    }
    tags_all                                                     = {
        "Env"  = "Test"
        "Name" = "Tao-LB"
    }
    xff_header_processing_mode                                   = "append"



    subnet_mapping {
        allocation_id        = null
        ipv6_address         = null
        outpost_id           = null
        private_ipv4_address = null
        subnet_id            = "subnet-0b758a523da70ff65"
    }
    subnet_mapping {
        allocation_id        = null
        ipv6_address         = null
        outpost_id           = null
        private_ipv4_address = null
        subnet_id            = "subnet-0ec729c87fee32f90"
    }
}
